# hello

ada/: hello.gpr
ada/src/: hello.adb
haskell/: hello.cabal  stack.yaml
haskell/app/: Main.hs
vala/: meson.build
