name:                hello
version:             0.1.0.0
synopsis:            Example GTK+ hello world program
description:         Example of a GTK+ hello world program written in Haskell
homepage:            https://github.com/chergert/hello
author:              Arun Raghavan
maintainer:          arun@arunraghavan.net
copyright:           2017 Arun Raghavan
category:            Example
build-type:          Simple
cabal-version:       >=1.10

executable hello-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-gi-base
                     , gi-gio
                     , gi-gtk
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chergert/hello
